avformat/http: Properly handle cookies that specify sub-domain where the URL.

Fixes ticket #3336

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>